// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemovableListItem does not render as links when no URL specified 1`] = `
<div
  className="item"
>
  <RoundImage
    className="avatar"
    medium={true}
    url="zeus.png"
  />
  <span>
    Zeus
  </span>
  <span
    className="remove-button text-button"
    onClick={[Function]}
  >
    Remove
  </span>
</div>
`;

exports[`RemovableListItem doesnt render a remove link 1`] = `
<div
  className="item"
>
  <Link
    replace={false}
    to="/happy/place"
  >
    <RoundImage
      className="avatar"
      medium={true}
      url="zeus.png"
    />
  </Link>
  <Link
    className="name bdy-drk-sm"
    replace={false}
    to="/happy/place"
  >
    Zeus
  </Link>
</div>
`;

exports[`RemovableListItem renders correctly 1`] = `
<div
  className="item"
>
  <Link
    replace={false}
    to="/happy/place"
  >
    <RoundImage
      className="avatar"
      medium={true}
      url="zeus.png"
    />
  </Link>
  <Link
    className="name bdy-drk-sm"
    replace={false}
    to="/happy/place"
  >
    Zeus
  </Link>
  <span
    className="remove-button text-button"
    onClick={[Function]}
  >
    Remove
  </span>
</div>
`;
